# EcomScrape

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.txt  EcomScrape_FrontendPlan.md  EcomScrape_Project_Documentation.docx  README.md  ecomscrape-codex-plan-full.md  ecomspec.md  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
.github/workflows/: update_dataset.yml
api/: index.py
configs/: books_toscrape.yaml
docs/: analytics.html  charts.html  index.html  product_details.html  products.html
docs/assets/: custom.css  state.js  tailwind.css  ui.js
docs/assets/js/: analytics.js
docs/datasets/: latest_products.json
ecomscrape/: __init__.py  api.py  cleaner.py  cli.py  config.py  dataset.py  exporter.py  fetch.py  models.py  parser.py  site_adapters.py
ecomscrape.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
examples/: EcomScrape_Analysis.ipynb
frontend/: charts.html
outputs/processed/: latest_products.json  products_20251124_184851.json  products_20251130_181240.json  products_20251130_183038.json
scripts/: sync-data.js
tests/: test_api.py  test_cleaner.py  test_cli.py  test_config.py  test_exporter.py  test_fetch.py  test_parser.py
